--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "start": "nodemon --inspect Server.js "
+    "start": "node --inspect Server.js "
   }
 }
